Fixed sidebar text alignment

--- a/app/themes/mcc-cycling/assets/less/partials/social.less
+++ b/app/themes/mcc-cycling/assets/less/partials/social.less
@@ -4,7 +4,7 @@
   text-align: center;
 
   @media (min-width: @screen-sm-min) {
-    text-align: center;
+    text-align: left;
   }
 
   .widget-inner {
